Add articles endpoints in swagger
